// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CheckboxGroup CheckboxGroup 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-required={true}
    className="grid-gap grid-row usa-fieldset"
    id="storybook-CheckboxGroup-fieldset"
  >
    <legend
      id="fieldset-legend-storybook-CheckboxGroup-fieldset"
    >
      <span
        className="usa-sr-only"
      >
        CheckboxGroup
      </span>
    </legend>
    <div
      className="grid-gap margin-top-3 grid-row flex-align-start"
    >
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="one"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="one"
          >
            Option 1
          </label>
        </div>
      </span>
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="two"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="two"
          >
            Option 2
          </label>
        </div>
      </span>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots CheckboxGroup CheckboxGroup with both single element expansion 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-required={true}
    className="grid-gap grid-row usa-fieldset"
    id="storybook-CheckboxGroup-fieldset"
  >
    <legend
      id="fieldset-legend-storybook-CheckboxGroup-fieldset"
    >
      <span
        className="usa-sr-only"
      >
        CheckboxGroup
      </span>
    </legend>
    <div
      className="grid-gap margin-top-3 grid-row flex-align-start"
    >
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="one"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="one"
          >
            Option 1
          </label>
        </div>
      </span>
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="two"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="two"
          >
            Option 2
          </label>
        </div>
      </span>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots CheckboxGroup CheckboxGroup with error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="checklis-error"
    aria-invalid={true}
    aria-required={true}
    className="grid-gap grid-row usa-fieldset usa-fieldset--error"
    id="storybook-CheckboxGroup-fieldset"
  >
    <legend
      id="fieldset-legend-storybook-CheckboxGroup-fieldset"
    >
      <span
        className="usa-sr-only"
      >
        CheckboxGroup
      </span>
    </legend>
    <span
      className="usa-error-message"
      id="checklis-error"
      role="alert"
    >
      
       
      These fields will block your progress
    </span>
    <div
      className="grid-gap margin-top-3 grid-row flex-align-start"
    >
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="one"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="one"
          >
            Option 1
          </label>
        </div>
      </span>
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="two"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="two"
          >
            Option 2
          </label>
        </div>
      </span>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots CheckboxGroup CheckboxGroup with one multi element expansion 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-required={true}
    className="grid-gap grid-row usa-fieldset"
    id="storybook-CheckboxGroup-fieldset"
  >
    <legend
      id="fieldset-legend-storybook-CheckboxGroup-fieldset"
    >
      <span
        className="usa-sr-only"
      >
        CheckboxGroup
      </span>
    </legend>
    <div
      className="grid-gap margin-top-3 grid-row flex-align-start"
    >
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="one"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="one"
          >
            Option 1
          </label>
        </div>
      </span>
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="two"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="two"
          >
            Option 2
          </label>
        </div>
      </span>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots CheckboxGroup CheckboxGroup with one single element expansion 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-required={true}
    className="grid-gap grid-row usa-fieldset"
    id="storybook-CheckboxGroup-fieldset"
  >
    <legend
      id="fieldset-legend-storybook-CheckboxGroup-fieldset"
    >
      <span
        className="usa-sr-only"
      >
        CheckboxGroup
      </span>
    </legend>
    <div
      className="grid-gap margin-top-3 grid-row flex-align-start"
    >
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="one"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="one"
          >
            Option 1
          </label>
        </div>
      </span>
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="two"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="two"
          >
            Option 2
          </label>
        </div>
      </span>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots CheckboxGroup CheckboxGroup with success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="checklist-success"
    aria-invalid={false}
    aria-required={true}
    className="grid-gap grid-row usa-fieldset usa-fieldset--success"
    id="storybook-CheckboxGroup-fieldset"
  >
    <legend
      id="fieldset-legend-storybook-CheckboxGroup-fieldset"
    >
      <span
        className="usa-sr-only"
      >
        CheckboxGroup
      </span>
    </legend>
    <span
      className="usa-success-message"
      id="checklist-success"
      role="status"
    >
      
       
      These fields were validated woo
    </span>
    <div
      className="grid-gap margin-top-3 grid-row flex-align-start"
    >
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="one"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="one"
          >
            Option 1
          </label>
        </div>
      </span>
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="two"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="two"
          >
            Option 2
          </label>
        </div>
      </span>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots CheckboxGroup CheckboxGroup with warning 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="checklist-warning"
    aria-invalid={false}
    aria-required={true}
    className="grid-gap grid-row usa-fieldset usa-fieldset--warning"
    id="storybook-CheckboxGroup-fieldset"
  >
    <legend
      id="fieldset-legend-storybook-CheckboxGroup-fieldset"
    >
      <span
        className="usa-sr-only"
      >
        CheckboxGroup
      </span>
    </legend>
    <span
      className="usa-warning-message"
      id="checklist-warning"
      role="status"
    >
      <span
        className="oec-inline-icon oec-inline-icon--incomplete"
      >
        <span
          className="usa-sr-only"
        >
          (
          incomplete
          )
        </span>
      </span>
       
      These fields need your attention
    </span>
    <div
      className="grid-gap margin-top-3 grid-row flex-align-start"
    >
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="one"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="one"
          >
            Option 1
          </label>
        </div>
      </span>
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="two"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="two"
          >
            Option 2
          </label>
        </div>
      </span>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots CheckboxGroup Disabled CheckboxGroup 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-required={true}
    className="grid-gap grid-row usa-fieldset"
    disabled={true}
    id="storybook-CheckboxGroup-fieldset"
  >
    <legend
      id="fieldset-legend-storybook-CheckboxGroup-fieldset"
    >
      <span
        className="usa-sr-only"
      >
        CheckboxGroup
      </span>
    </legend>
    <div
      className="grid-gap margin-top-3 grid-row flex-align-start"
    >
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="one"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="one"
          >
            Option 1
          </label>
        </div>
      </span>
      <span
        onChange={[Function]}
      >
        <div
          className="usa-checkbox"
        >
          <input
            className="usa-checkbox__input"
            disabled={false}
            id="two"
            onChange={[Function]}
            selected={false}
            type="checkbox"
          />
          <label
            className="usa-checkbox__label"
            htmlFor="two"
          >
            Option 2
          </label>
        </div>
      </span>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Date input Default with date 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="dateinput-example-hint"
    aria-required={true}
    className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
    id="dateinput-example"
  >
    <legend
      id="fieldset-legend-dateinput-example"
    >
      <span
        className="usa-label"
      >
        Date
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 01/01/2020
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <input
        aria-hidden={true}
        defaultValue="1572393600000"
        disabled={true}
        hidden={true}
        id="dateinput-example-internal"
      />
      <div
        className="flex-row flex-align-end grid-gap position-relative"
      >
        <div
          className="oec-date-input__text usa-form-group"
        >
          <label
            className="usa-label usa-sr-only"
            htmlFor="dateinput-example-input"
          >
            Date
             
          </label>
          <input
            aria-required={true}
            className="usa-input"
            defaultValue="10/30/2019"
            id="dateinput-example-input"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyUp={[Function]}
            type="text"
            value="10/30/2019"
          />
        </div>
        <div
          className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
        >
          <button
            className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
            onClick={[Function]}
            title="open calendar"
            type="button"
          >
            <svg
              className="oec-calendar-toggle__icon"
            >
              calendar.svg
            </svg>
          </button>
          <div
            className="oec-calendar-dropdown__calendar position-absolute z-top"
            hidden={true}
          >
            &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Date input Default with no date set 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="dateinput-example-hint"
    aria-required={true}
    className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
    id="dateinput-example"
  >
    <legend
      id="fieldset-legend-dateinput-example"
    >
      <span
        className="usa-label"
      >
        Date
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 01/01/2020
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <input
        aria-hidden={true}
        disabled={true}
        hidden={true}
        id="dateinput-example-internal"
      />
      <div
        className="flex-row flex-align-end grid-gap position-relative"
      >
        <div
          className="oec-date-input__text usa-form-group"
        >
          <label
            className="usa-label usa-sr-only"
            htmlFor="dateinput-example-input"
          >
            Date
             
          </label>
          <input
            aria-required={true}
            className="usa-input"
            id="dateinput-example-input"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyUp={[Function]}
            type="text"
          />
        </div>
        <div
          className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
        >
          <button
            className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
            onClick={[Function]}
            title="open calendar"
            type="button"
          >
            <svg
              className="oec-calendar-toggle__icon"
            >
              calendar.svg
            </svg>
          </button>
          <div
            className="oec-calendar-dropdown__calendar position-absolute z-top"
            hidden={true}
          >
            &lt;DayPickerSingleDateController" {"date":null,"focused":false}/&gt;
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Date input Disabled day input 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="dateinput-example-hint"
    aria-required={true}
    className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
    disabled={true}
    id="dateinput-example"
  >
    <legend
      id="fieldset-legend-dateinput-example"
    >
      <span
        className="usa-label"
      >
        Date
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 01/01/2020
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <input
        aria-hidden={true}
        defaultValue="1572393600000"
        disabled={true}
        hidden={true}
        id="dateinput-example-internal"
      />
      <div
        className="flex-row flex-align-end grid-gap position-relative"
      >
        <div
          className="oec-date-input__text usa-form-group"
        >
          <label
            className="usa-label usa-sr-only"
            htmlFor="dateinput-example-input"
          >
            Date
             
          </label>
          <input
            aria-required={true}
            className="usa-input"
            defaultValue="10/30/2019"
            id="dateinput-example-input"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyUp={[Function]}
            type="text"
            value="10/30/2019"
          />
        </div>
        <div
          className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
        >
          <button
            className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
            onClick={[Function]}
            title="open calendar"
            type="button"
          >
            <svg
              className="oec-calendar-toggle__icon"
            >
              calendar.svg
            </svg>
          </button>
          <div
            className="oec-calendar-dropdown__calendar position-absolute z-top"
            hidden={true}
          >
            &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Date input Error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="DateInput-error"
    aria-invalid={true}
    aria-required={true}
    className="grid-gap grid-row usa-fieldset usa-fieldset--error oec-date-input oec-date-input-single"
    id="dateinput-example"
  >
    <legend
      id="fieldset-legend-dateinput-example"
    >
      <span
        className="usa-label usa-label--error"
      >
        Date
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 01/01/2020
    </span>
    <span
      className="usa-error-message"
      id="DateInput-error"
      role="alert"
    >
      
       
      Pick a better date
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <input
        aria-hidden={true}
        defaultValue="1572393600000"
        disabled={true}
        hidden={true}
        id="dateinput-example-internal"
      />
      <div
        className="flex-row flex-align-end grid-gap position-relative"
      >
        <div
          className="oec-date-input__text usa-form-group usa-form-group--error"
        >
          <label
            className="usa-label usa-label--error usa-sr-only"
            htmlFor="dateinput-example-input"
          >
            Date
             
          </label>
          <input
            aria-describedby="DateInput-error"
            aria-invalid={true}
            aria-required={true}
            className="usa-input usa-input--error"
            defaultValue="10/30/2019"
            id="dateinput-example-input"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyUp={[Function]}
            type="text"
            value="10/30/2019"
          />
        </div>
        <div
          className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
        >
          <button
            className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
            onClick={[Function]}
            title="open calendar"
            type="button"
          >
            <svg
              className="oec-calendar-toggle__icon"
            >
              calendar.svg
            </svg>
          </button>
          <div
            className="oec-calendar-dropdown__calendar position-absolute z-top"
            hidden={true}
          >
            &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Date input Optional 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="dateinput-example-hint"
    aria-required={false}
    className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
    id="dateinput-example"
  >
    <legend
      id="fieldset-legend-dateinput-example"
    >
      <span
        className="usa-label"
      >
        Date
        <span
          className="usa-hint"
        >
           (optional)
        </span>
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 01/01/2020
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <input
        aria-hidden={true}
        defaultValue="1572393600000"
        disabled={true}
        hidden={true}
        id="dateinput-example-internal"
      />
      <div
        className="flex-row flex-align-end grid-gap position-relative"
      >
        <div
          className="oec-date-input__text usa-form-group"
        >
          <label
            className="usa-label usa-sr-only"
            htmlFor="dateinput-example-input"
          >
            Date
             
          </label>
          <input
            aria-required={true}
            className="usa-input"
            defaultValue="10/30/2019"
            id="dateinput-example-input"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyUp={[Function]}
            type="text"
            value="10/30/2019"
          />
        </div>
        <div
          className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
        >
          <button
            className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
            onClick={[Function]}
            title="open calendar"
            type="button"
          >
            <svg
              className="oec-calendar-toggle__icon"
            >
              calendar.svg
            </svg>
          </button>
          <div
            className="oec-calendar-dropdown__calendar position-absolute z-top"
            hidden={true}
          >
            &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Date input Success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="DateInput-success"
    aria-invalid={false}
    aria-required={true}
    className="grid-gap grid-row usa-fieldset usa-fieldset--success oec-date-input oec-date-input-single"
    id="dateinput-example"
  >
    <legend
      id="fieldset-legend-dateinput-example"
    >
      <span
        className="usa-label usa-label--success"
      >
        Date
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 01/01/2020
    </span>
    <span
      className="usa-success-message"
      id="DateInput-success"
      role="status"
    >
      
       
      You did good
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <input
        aria-hidden={true}
        defaultValue="1572393600000"
        disabled={true}
        hidden={true}
        id="dateinput-example-internal"
      />
      <div
        className="flex-row flex-align-end grid-gap position-relative"
      >
        <div
          className="oec-date-input__text usa-form-group usa-form-group--success"
        >
          <label
            className="usa-label usa-label--success usa-sr-only"
            htmlFor="dateinput-example-input"
          >
            Date
             
          </label>
          <input
            aria-describedby="DateInput-success"
            aria-invalid={false}
            aria-required={true}
            className="usa-input usa-input--success"
            defaultValue="10/30/2019"
            id="dateinput-example-input"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyUp={[Function]}
            type="text"
            value="10/30/2019"
          />
        </div>
        <div
          className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
        >
          <button
            className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
            onClick={[Function]}
            title="open calendar"
            type="button"
          >
            <svg
              className="oec-calendar-toggle__icon"
            >
              calendar.svg
            </svg>
          </button>
          <div
            className="oec-calendar-dropdown__calendar position-absolute z-top"
            hidden={true}
          >
            &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Date input Warning 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="DateInput-warning"
    aria-invalid={false}
    aria-required={true}
    className="grid-gap grid-row usa-fieldset usa-fieldset--warning oec-date-input oec-date-input-single"
    id="dateinput-example"
  >
    <legend
      id="fieldset-legend-dateinput-example"
    >
      <span
        className="usa-label usa-label--warning"
      >
        Date
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 01/01/2020
    </span>
    <span
      className="usa-warning-message"
      id="DateInput-warning"
      role="status"
    >
      <span
        className="oec-inline-icon oec-inline-icon--incomplete"
      >
        <span
          className="usa-sr-only"
        >
          (
          incomplete
          )
        </span>
      </span>
       
      Meh, fine
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <input
        aria-hidden={true}
        defaultValue="1572393600000"
        disabled={true}
        hidden={true}
        id="dateinput-example-internal"
      />
      <div
        className="flex-row flex-align-end grid-gap position-relative"
      >
        <div
          className="oec-date-input__text usa-form-group usa-form-group--warning"
        >
          <label
            className="usa-label usa-label--warning usa-sr-only"
            htmlFor="dateinput-example-input"
          >
            Date
             
          </label>
          <input
            aria-describedby="DateInput-warning"
            aria-invalid={false}
            aria-required={true}
            className="usa-input usa-input--warning"
            defaultValue="10/30/2019"
            id="dateinput-example-input"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyUp={[Function]}
            type="text"
            value="10/30/2019"
          />
        </div>
        <div
          className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
        >
          <button
            className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
            onClick={[Function]}
            title="open calendar"
            type="button"
          >
            <svg
              className="oec-calendar-toggle__icon"
            >
              calendar.svg
            </svg>
          </button>
          <div
            className="oec-calendar-dropdown__calendar position-absolute z-top"
            hidden={true}
          >
            &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DateRangeInput Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="default-DateRangeInput-outer-fieldset-hint"
    aria-required={true}
    className="grid-gap grid-row usa-fieldset oec-date-range-input"
    id="default-DateRangeInput-outer-fieldset"
  >
    <legend
      id="fieldset-legend-default-DateRangeInput-outer-fieldset"
    >
      <span
        className="usa-label"
      >
        Pick a date
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 04/28/1986
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <div
        className="display-flex flex-direction-row flex-align-end"
      >
        <fieldset
          aria-required={true}
          className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
          id="default-DateRangeInput-start-date"
        >
          <legend
            id="fieldset-legend-default-DateRangeInput-start-date"
          >
            <span
              className="usa-label"
            >
              Start date
            </span>
          </legend>
          <div
            className="grid-gap grid-row flex-align-start"
          >
            <input
              aria-hidden={true}
              defaultValue="1572393600000"
              disabled={true}
              hidden={true}
              id="default-DateRangeInput-start-date-internal"
            />
            <div
              className="flex-row flex-align-end grid-gap position-relative"
            >
              <div
                className="oec-date-input__text usa-form-group"
              >
                <label
                  className="usa-label usa-sr-only"
                  htmlFor="default-DateRangeInput-start-date-input"
                >
                  Start date
                   
                </label>
                <input
                  aria-required={true}
                  className="usa-input"
                  defaultValue="10/30/2019"
                  id="default-DateRangeInput-start-date-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyUp={[Function]}
                  type="text"
                  value="10/30/2019"
                />
              </div>
              <div
                className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
              >
                <button
                  className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
                  onClick={[Function]}
                  title="open calendar"
                  type="button"
                >
                  <svg
                    className="oec-calendar-toggle__icon"
                  >
                    calendar.svg
                  </svg>
                </button>
                <div
                  className="oec-calendar-dropdown__calendar position-absolute z-top"
                  hidden={true}
                >
                  &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <div
          className="oec-date-range-input__arrow"
        >
          <svg>
            arrowRight.svg
          </svg>
        </div>
        <fieldset
          aria-required={true}
          className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
          id="default-DateRangeInput-end-date"
        >
          <legend
            id="fieldset-legend-default-DateRangeInput-end-date"
          >
            <span
              className="usa-label"
            >
              End date
            </span>
          </legend>
          <div
            className="grid-gap grid-row flex-align-start"
          >
            <input
              aria-hidden={true}
              defaultValue="1572393600000"
              disabled={true}
              hidden={true}
              id="default-DateRangeInput-end-date-internal"
            />
            <div
              className="flex-row flex-align-end grid-gap position-relative"
            >
              <div
                className="oec-date-input__text usa-form-group"
              >
                <label
                  className="usa-label usa-sr-only"
                  htmlFor="default-DateRangeInput-end-date-input"
                >
                  End date
                   
                </label>
                <input
                  aria-required={true}
                  className="usa-input"
                  defaultValue="10/30/2019"
                  id="default-DateRangeInput-end-date-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyUp={[Function]}
                  type="text"
                  value="10/30/2019"
                />
              </div>
              <div
                className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
              >
                <button
                  className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
                  onClick={[Function]}
                  title="open calendar"
                  type="button"
                >
                  <svg
                    className="oec-calendar-toggle__icon"
                  >
                    calendar.svg
                  </svg>
                </button>
                <div
                  className="oec-calendar-dropdown__calendar position-absolute z-top"
                  hidden={true}
                >
                  &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DateRangeInput Disabled 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="disabled-DateRangeInput-outer-fieldset-hint"
    aria-required={true}
    className="grid-gap grid-row usa-fieldset oec-date-range-input"
    disabled={true}
    id="disabled-DateRangeInput-outer-fieldset"
  >
    <legend
      id="fieldset-legend-disabled-DateRangeInput-outer-fieldset"
    >
      <span
        className="usa-label"
      >
        Pick a date
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 04/28/1986
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <div
        className="display-flex flex-direction-row flex-align-end"
      >
        <fieldset
          aria-required={true}
          className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
          id="disabled-DateRangeInput-start-date"
        >
          <legend
            id="fieldset-legend-disabled-DateRangeInput-start-date"
          >
            <span
              className="usa-label"
            >
              Start date
            </span>
          </legend>
          <div
            className="grid-gap grid-row flex-align-start"
          >
            <input
              aria-hidden={true}
              defaultValue="1572393600000"
              disabled={true}
              hidden={true}
              id="disabled-DateRangeInput-start-date-internal"
            />
            <div
              className="flex-row flex-align-end grid-gap position-relative"
            >
              <div
                className="oec-date-input__text usa-form-group"
              >
                <label
                  className="usa-label usa-sr-only"
                  htmlFor="disabled-DateRangeInput-start-date-input"
                >
                  Start date
                   
                </label>
                <input
                  aria-required={true}
                  className="usa-input"
                  defaultValue="10/30/2019"
                  id="disabled-DateRangeInput-start-date-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyUp={[Function]}
                  type="text"
                  value="10/30/2019"
                />
              </div>
              <div
                className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
              >
                <button
                  className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
                  onClick={[Function]}
                  title="open calendar"
                  type="button"
                >
                  <svg
                    className="oec-calendar-toggle__icon"
                  >
                    calendar.svg
                  </svg>
                </button>
                <div
                  className="oec-calendar-dropdown__calendar position-absolute z-top"
                  hidden={true}
                >
                  &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <div
          className="oec-date-range-input__arrow"
        >
          <svg>
            arrowRight.svg
          </svg>
        </div>
        <fieldset
          aria-required={true}
          className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
          id="disabled-DateRangeInput-end-date"
        >
          <legend
            id="fieldset-legend-disabled-DateRangeInput-end-date"
          >
            <span
              className="usa-label"
            >
              End date
            </span>
          </legend>
          <div
            className="grid-gap grid-row flex-align-start"
          >
            <input
              aria-hidden={true}
              defaultValue="1572393600000"
              disabled={true}
              hidden={true}
              id="disabled-DateRangeInput-end-date-internal"
            />
            <div
              className="flex-row flex-align-end grid-gap position-relative"
            >
              <div
                className="oec-date-input__text usa-form-group"
              >
                <label
                  className="usa-label usa-sr-only"
                  htmlFor="disabled-DateRangeInput-end-date-input"
                >
                  End date
                   
                </label>
                <input
                  aria-required={true}
                  className="usa-input"
                  defaultValue="10/30/2019"
                  id="disabled-DateRangeInput-end-date-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyUp={[Function]}
                  type="text"
                  value="10/30/2019"
                />
              </div>
              <div
                className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
              >
                <button
                  className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
                  onClick={[Function]}
                  title="open calendar"
                  type="button"
                >
                  <svg
                    className="oec-calendar-toggle__icon"
                  >
                    calendar.svg
                  </svg>
                </button>
                <div
                  className="oec-calendar-dropdown__calendar position-absolute z-top"
                  hidden={true}
                >
                  &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DateRangeInput Error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="range-input-error"
    aria-invalid={true}
    aria-required={true}
    className="grid-gap grid-row usa-fieldset usa-fieldset--error oec-date-range-input"
    id="error-DateRangeInput-outer-fieldset"
  >
    <legend
      id="fieldset-legend-error-DateRangeInput-outer-fieldset"
    >
      <span
        className="usa-label usa-label--error"
      >
        Pick a date
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 04/28/1986
    </span>
    <span
      className="usa-error-message"
      id="range-input-error"
      role="alert"
    >
      
       
      Pick a better date
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <div
        className="display-flex flex-direction-row flex-align-end"
      >
        <fieldset
          aria-required={true}
          className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
          id="error-DateRangeInput-start-date"
        >
          <legend
            id="fieldset-legend-error-DateRangeInput-start-date"
          >
            <span
              className="usa-label"
            >
              Start date
            </span>
          </legend>
          <div
            className="grid-gap grid-row flex-align-start"
          >
            <input
              aria-hidden={true}
              defaultValue="1572393600000"
              disabled={true}
              hidden={true}
              id="error-DateRangeInput-start-date-internal"
            />
            <div
              className="flex-row flex-align-end grid-gap position-relative"
            >
              <div
                className="oec-date-input__text usa-form-group"
              >
                <label
                  className="usa-label usa-sr-only"
                  htmlFor="error-DateRangeInput-start-date-input"
                >
                  Start date
                   
                </label>
                <input
                  aria-required={true}
                  className="usa-input"
                  defaultValue="10/30/2019"
                  id="error-DateRangeInput-start-date-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyUp={[Function]}
                  type="text"
                  value="10/30/2019"
                />
              </div>
              <div
                className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
              >
                <button
                  className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
                  onClick={[Function]}
                  title="open calendar"
                  type="button"
                >
                  <svg
                    className="oec-calendar-toggle__icon"
                  >
                    calendar.svg
                  </svg>
                </button>
                <div
                  className="oec-calendar-dropdown__calendar position-absolute z-top"
                  hidden={true}
                >
                  &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <div
          className="oec-date-range-input__arrow"
        >
          <svg>
            arrowRight.svg
          </svg>
        </div>
        <fieldset
          aria-required={true}
          className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
          id="error-DateRangeInput-end-date"
        >
          <legend
            id="fieldset-legend-error-DateRangeInput-end-date"
          >
            <span
              className="usa-label"
            >
              End date
            </span>
          </legend>
          <div
            className="grid-gap grid-row flex-align-start"
          >
            <input
              aria-hidden={true}
              defaultValue="1572393600000"
              disabled={true}
              hidden={true}
              id="error-DateRangeInput-end-date-internal"
            />
            <div
              className="flex-row flex-align-end grid-gap position-relative"
            >
              <div
                className="oec-date-input__text usa-form-group"
              >
                <label
                  className="usa-label usa-sr-only"
                  htmlFor="error-DateRangeInput-end-date-input"
                >
                  End date
                   
                </label>
                <input
                  aria-required={true}
                  className="usa-input"
                  defaultValue="10/30/2019"
                  id="error-DateRangeInput-end-date-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyUp={[Function]}
                  type="text"
                  value="10/30/2019"
                />
              </div>
              <div
                className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
              >
                <button
                  className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
                  onClick={[Function]}
                  title="open calendar"
                  type="button"
                >
                  <svg
                    className="oec-calendar-toggle__icon"
                  >
                    calendar.svg
                  </svg>
                </button>
                <div
                  className="oec-calendar-dropdown__calendar position-absolute z-top"
                  hidden={true}
                >
                  &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DateRangeInput Optional 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="optional-DateRangeInput-outer-fieldset-hint"
    aria-required={false}
    className="grid-gap grid-row usa-fieldset oec-date-range-input"
    id="optional-DateRangeInput-outer-fieldset"
  >
    <legend
      id="fieldset-legend-optional-DateRangeInput-outer-fieldset"
    >
      <span
        className="usa-label"
      >
        Pick a date
        <span
          className="usa-hint"
        >
           (optional)
        </span>
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 04/28/1986
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <div
        className="display-flex flex-direction-row flex-align-end"
      >
        <fieldset
          aria-required={true}
          className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
          id="optional-DateRangeInput-start-date"
        >
          <legend
            id="fieldset-legend-optional-DateRangeInput-start-date"
          >
            <span
              className="usa-label"
            >
              Start date
            </span>
          </legend>
          <div
            className="grid-gap grid-row flex-align-start"
          >
            <input
              aria-hidden={true}
              defaultValue="1572393600000"
              disabled={true}
              hidden={true}
              id="optional-DateRangeInput-start-date-internal"
            />
            <div
              className="flex-row flex-align-end grid-gap position-relative"
            >
              <div
                className="oec-date-input__text usa-form-group"
              >
                <label
                  className="usa-label usa-sr-only"
                  htmlFor="optional-DateRangeInput-start-date-input"
                >
                  Start date
                   
                </label>
                <input
                  aria-required={true}
                  className="usa-input"
                  defaultValue="10/30/2019"
                  id="optional-DateRangeInput-start-date-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyUp={[Function]}
                  type="text"
                  value="10/30/2019"
                />
              </div>
              <div
                className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
              >
                <button
                  className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
                  onClick={[Function]}
                  title="open calendar"
                  type="button"
                >
                  <svg
                    className="oec-calendar-toggle__icon"
                  >
                    calendar.svg
                  </svg>
                </button>
                <div
                  className="oec-calendar-dropdown__calendar position-absolute z-top"
                  hidden={true}
                >
                  &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <div
          className="oec-date-range-input__arrow"
        >
          <svg>
            arrowRight.svg
          </svg>
        </div>
        <fieldset
          aria-required={true}
          className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
          id="optional-DateRangeInput-end-date"
        >
          <legend
            id="fieldset-legend-optional-DateRangeInput-end-date"
          >
            <span
              className="usa-label"
            >
              End date
            </span>
          </legend>
          <div
            className="grid-gap grid-row flex-align-start"
          >
            <input
              aria-hidden={true}
              defaultValue="1572393600000"
              disabled={true}
              hidden={true}
              id="optional-DateRangeInput-end-date-internal"
            />
            <div
              className="flex-row flex-align-end grid-gap position-relative"
            >
              <div
                className="oec-date-input__text usa-form-group"
              >
                <label
                  className="usa-label usa-sr-only"
                  htmlFor="optional-DateRangeInput-end-date-input"
                >
                  End date
                   
                </label>
                <input
                  aria-required={true}
                  className="usa-input"
                  defaultValue="10/30/2019"
                  id="optional-DateRangeInput-end-date-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyUp={[Function]}
                  type="text"
                  value="10/30/2019"
                />
              </div>
              <div
                className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
              >
                <button
                  className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
                  onClick={[Function]}
                  title="open calendar"
                  type="button"
                >
                  <svg
                    className="oec-calendar-toggle__icon"
                  >
                    calendar.svg
                  </svg>
                </button>
                <div
                  className="oec-calendar-dropdown__calendar position-absolute z-top"
                  hidden={true}
                >
                  &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DateRangeInput Success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="range-input-success"
    aria-invalid={false}
    aria-required={true}
    className="grid-gap grid-row usa-fieldset usa-fieldset--success oec-date-range-input"
    id="error-DateRangeInput-outer-fieldset"
  >
    <legend
      id="fieldset-legend-error-DateRangeInput-outer-fieldset"
    >
      <span
        className="usa-label usa-label--success"
      >
        Pick a date
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 04/28/1986
    </span>
    <span
      className="usa-success-message"
      id="range-input-success"
      role="status"
    >
      
       
      You did good
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <div
        className="display-flex flex-direction-row flex-align-end"
      >
        <fieldset
          aria-required={true}
          className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
          id="error-DateRangeInput-start-date"
        >
          <legend
            id="fieldset-legend-error-DateRangeInput-start-date"
          >
            <span
              className="usa-label"
            >
              Start date
            </span>
          </legend>
          <div
            className="grid-gap grid-row flex-align-start"
          >
            <input
              aria-hidden={true}
              defaultValue="1572393600000"
              disabled={true}
              hidden={true}
              id="error-DateRangeInput-start-date-internal"
            />
            <div
              className="flex-row flex-align-end grid-gap position-relative"
            >
              <div
                className="oec-date-input__text usa-form-group"
              >
                <label
                  className="usa-label usa-sr-only"
                  htmlFor="error-DateRangeInput-start-date-input"
                >
                  Start date
                   
                </label>
                <input
                  aria-required={true}
                  className="usa-input"
                  defaultValue="10/30/2019"
                  id="error-DateRangeInput-start-date-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyUp={[Function]}
                  type="text"
                  value="10/30/2019"
                />
              </div>
              <div
                className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
              >
                <button
                  className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
                  onClick={[Function]}
                  title="open calendar"
                  type="button"
                >
                  <svg
                    className="oec-calendar-toggle__icon"
                  >
                    calendar.svg
                  </svg>
                </button>
                <div
                  className="oec-calendar-dropdown__calendar position-absolute z-top"
                  hidden={true}
                >
                  &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <div
          className="oec-date-range-input__arrow"
        >
          <svg>
            arrowRight.svg
          </svg>
        </div>
        <fieldset
          aria-required={true}
          className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
          id="error-DateRangeInput-end-date"
        >
          <legend
            id="fieldset-legend-error-DateRangeInput-end-date"
          >
            <span
              className="usa-label"
            >
              End date
            </span>
          </legend>
          <div
            className="grid-gap grid-row flex-align-start"
          >
            <input
              aria-hidden={true}
              defaultValue="1572393600000"
              disabled={true}
              hidden={true}
              id="error-DateRangeInput-end-date-internal"
            />
            <div
              className="flex-row flex-align-end grid-gap position-relative"
            >
              <div
                className="oec-date-input__text usa-form-group"
              >
                <label
                  className="usa-label usa-sr-only"
                  htmlFor="error-DateRangeInput-end-date-input"
                >
                  End date
                   
                </label>
                <input
                  aria-required={true}
                  className="usa-input"
                  defaultValue="10/30/2019"
                  id="error-DateRangeInput-end-date-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyUp={[Function]}
                  type="text"
                  value="10/30/2019"
                />
              </div>
              <div
                className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
              >
                <button
                  className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
                  onClick={[Function]}
                  title="open calendar"
                  type="button"
                >
                  <svg
                    className="oec-calendar-toggle__icon"
                  >
                    calendar.svg
                  </svg>
                </button>
                <div
                  className="oec-calendar-dropdown__calendar position-absolute z-top"
                  hidden={true}
                >
                  &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DateRangeInput Warning 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    aria-describedby="range-input-warning"
    aria-invalid={false}
    aria-required={true}
    className="grid-gap grid-row usa-fieldset usa-fieldset--warning oec-date-range-input"
    id="error-DateRangeInput-outer-fieldset"
  >
    <legend
      id="fieldset-legend-error-DateRangeInput-outer-fieldset"
    >
      <span
        className="usa-label usa-label--warning"
      >
        Pick a date
      </span>
    </legend>
    <span
      className="usa-hint text-italic"
    >
      For example: 04/28/1986
    </span>
    <span
      className="usa-warning-message"
      id="range-input-warning"
      role="status"
    >
      <span
        className="oec-inline-icon oec-inline-icon--incomplete"
      >
        <span
          className="usa-sr-only"
        >
          (
          incomplete
          )
        </span>
      </span>
       
      Meh, fine
    </span>
    <div
      className="grid-gap grid-row flex-align-start"
    >
      <div
        className="display-flex flex-direction-row flex-align-end"
      >
        <fieldset
          aria-required={true}
          className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
          id="error-DateRangeInput-start-date"
        >
          <legend
            id="fieldset-legend-error-DateRangeInput-start-date"
          >
            <span
              className="usa-label"
            >
              Start date
            </span>
          </legend>
          <div
            className="grid-gap grid-row flex-align-start"
          >
            <input
              aria-hidden={true}
              defaultValue="1572393600000"
              disabled={true}
              hidden={true}
              id="error-DateRangeInput-start-date-internal"
            />
            <div
              className="flex-row flex-align-end grid-gap position-relative"
            >
              <div
                className="oec-date-input__text usa-form-group"
              >
                <label
                  className="usa-label usa-sr-only"
                  htmlFor="error-DateRangeInput-start-date-input"
                >
                  Start date
                   
                </label>
                <input
                  aria-required={true}
                  className="usa-input"
                  defaultValue="10/30/2019"
                  id="error-DateRangeInput-start-date-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyUp={[Function]}
                  type="text"
                  value="10/30/2019"
                />
              </div>
              <div
                className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
              >
                <button
                  className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
                  onClick={[Function]}
                  title="open calendar"
                  type="button"
                >
                  <svg
                    className="oec-calendar-toggle__icon"
                  >
                    calendar.svg
                  </svg>
                </button>
                <div
                  className="oec-calendar-dropdown__calendar position-absolute z-top"
                  hidden={true}
                >
                  &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <div
          className="oec-date-range-input__arrow"
        >
          <svg>
            arrowRight.svg
          </svg>
        </div>
        <fieldset
          aria-required={true}
          className="grid-gap grid-row usa-fieldset oec-date-input oec-date-input-single"
          id="error-DateRangeInput-end-date"
        >
          <legend
            id="fieldset-legend-error-DateRangeInput-end-date"
          >
            <span
              className="usa-label"
            >
              End date
            </span>
          </legend>
          <div
            className="grid-gap grid-row flex-align-start"
          >
            <input
              aria-hidden={true}
              defaultValue="1572393600000"
              disabled={true}
              hidden={true}
              id="error-DateRangeInput-end-date-internal"
            />
            <div
              className="flex-row flex-align-end grid-gap position-relative"
            >
              <div
                className="oec-date-input__text usa-form-group"
              >
                <label
                  className="usa-label usa-sr-only"
                  htmlFor="error-DateRangeInput-end-date-input"
                >
                  End date
                   
                </label>
                <input
                  aria-required={true}
                  className="usa-input"
                  defaultValue="10/30/2019"
                  id="error-DateRangeInput-end-date-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyUp={[Function]}
                  type="text"
                  value="10/30/2019"
                />
              </div>
              <div
                className="oec-calendar-dropdown oec-date-input__calendar-dropdown"
              >
                <button
                  className="usa-button oec-calendar-toggle oec-calendar-dropdown__toggle"
                  onClick={[Function]}
                  title="open calendar"
                  type="button"
                >
                  <svg
                    className="oec-calendar-toggle__icon"
                  >
                    calendar.svg
                  </svg>
                </button>
                <div
                  className="oec-calendar-dropdown__calendar position-absolute z-top"
                  hidden={true}
                >
                  &lt;DayPickerSingleDateController" {"date":"2019-10-30T00:00:00.000Z","focused":false}/&gt;
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </fieldset>
</div>
`;
